--- a/privacy.html
+++ b/privacy.html
@@ -238,57 +238,57 @@ body {
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Destapacaños-liquido-truper.html">Destapacaños liquido truper </a> 
+       <a href="./Destapa-Cañerias/Como-destapar-el-inodoro-con-bicarbonato-de-sodio.html">Como destapar el inodoro con bicarbonato de sodio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
+       <a href="./Destapa-Cañerias/Servicio-Destapa-Cañerias.html">Servicio Destapa Cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Destapaciones-De-Cañerias-en-Palermo.html">Destapaciones De Cañerias en Palermo </a> 
+       <a href="./Destapa-Cañerias/Como-hacer-para-destapar-el-inodoro-sin-sopapa.html">Como hacer para destapar el inodoro sin sopapa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Sonda-destapacaños-pretul.html">Sonda destapacaños pretul </a> 
+       <a href="./Servicios/En-que-objetos-se-encuentra-la-plata.html">En que objetos se encuentra la plata </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Como-destapar-el-bantilde;o-con-bicarbonato.html">Como destapar el baño con bicarbonato </a> 
+       <a href="./Servicios/Destapadora-De-Cloacas.html">Destapadora De Cloacas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Destapar-Cañerias-en-Palermo.html">Destapar Cañerias en Palermo </a> 
+       <a href="./Servicios/Destape-De-Cañerias-en-Palermo.html">Destape De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
+       <a href="./Servicios/Destapar-Rejilla-Bantilde;o.html">Destapar Rejilla Baño </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Mejor-Destapador-De-Cañerias-en-Palermo.html">Mejor Destapador De Cañerias en Palermo </a> 
+       <a href="./Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/La-ville-de-boulogne-sur-mer.html">La ville de boulogne sur mer </a> 
+       <a href="./Destapa-Cañerias/Como-destapar-un-baño-sin-bicarbonato.html">Como destapar un baño sin bicarbonato </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Destapa-Cañerias/Todo-Destapaciones.html">Todo Destapaciones </a> 
+       <a href="./Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="./Servicios/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
+       <a href="./Destapa-Cañerias/Destapacaños-liquido-para-inodoro.html">Destapacaños liquido para inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
