--- a/Destapa-Cañerias/Como-destapar-cañerias-de-desague-de-cocina.html
+++ b/Destapa-Cañerias/Como-destapar-cañerias-de-desague-de-cocina.html
@@ -138,27 +138,27 @@ Como destapar cañerias de desague de cocina - Destapador de caÃ±erias diablo 
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-24-Hs.html">Destapaciones 24 Hs </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-la-cantilde;eria-de-la-pileta-de-la-cocina.html">Como destapar la cañeria de la pileta de la cocina </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-pretul-precio.html">Destapacaños pretul precio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
+       <a href="../Destapa-Cañerias/Destapa-Cañerias-Inodoro.html">Destapa Cañerias Inodoro </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destape-De-Cañerias-en-Palermo.html">Destape De Cañerias en Palermo </a> 
+       <a href="../Servicios/Resorte-Destapa-Cañerias-en-Palermo.html">Resorte Destapa Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-un-baño-sin-bicarbonato.html">Como destapar un baño sin bicarbonato </a> 
+       <a href="../Servicios/Maquina-Destapaciones-De-Cantilde;erias.html">Maquina Destapaciones De Cañerias </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,37 +221,42 @@ Como destapar cañerias de desague de cocina - Destapador de caÃ±erias diablo 
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapa-Cañerias-Quilmes-en-Palermo.html">Destapa Cañerias Quilmes en Palermo </a> 
+       <a href="../Destapa-Cañerias/Destapar-Cañeria-Del-Baño.html">Destapar Cañeria Del Baño </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-tuberias-de-aguas-servidas.html">Destapar tuberias de aguas servidas </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias-24hs.html">Destapaciones Emergencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Precios-de-destapaciones-de-inodoros.html">Precios de destapaciones de inodoros </a> 
+       <a href="../Servicios/Con-Que-Destapo-Cañerias-en-Palermo.html">Con Que Destapo Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Cocina-mabe-4-quemadores.html">Cocina mabe 4 quemadores </a> 
+       <a href="../Servicios/Mayoristas-en-zona-sur.html">Mayoristas en zona sur </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
+       <a href="../Destapa-Cañerias/Maquina-Para-Destapar-Caños.html">Maquina Para Destapar Caños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
+       <a href="../Servicios/Como-destapar-el-inodoro-con-bicarbonato-de-sodio.html">Como destapar el inodoro con bicarbonato de sodio </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Destapar-Sifones.html">Destapar Sifones </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -261,17 +266,12 @@ Como destapar cañerias de desague de cocina - Destapador de caÃ±erias diablo 
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-el-inodoro-tapado-con-papel.html">Como destapar el inodoro tapado con papel </a> 
+       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Informacion-sobre-las-estrellas.html">Informacion sobre las estrellas </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html">Destapacaños Cerca De Mi Ubicación </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-aguas-negras.html">Como destapar cañerias de aguas negras </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
